# shadow

./: .gitignore  Cargo.toml
crates/asset/: Cargo.toml
crates/asset/src/: artifact.rs  asset.rs  bytes.rs  importer.rs  lib.rs  loader.rs  plugin.rs
crates/asset/src/database/: library.rs  mod.rs  registry.rs  state.rs
crates/asset/src/database/events/: import.rs  load.rs  mod.rs
crates/asset/src/io/: embedded.rs  local.rs  mod.rs  vfs.rs
crates/ecs/: Cargo.toml
crates/ecs/src/: lib.rs
crates/ecs/src/archetype/: mod.rs  table.rs
crates/ecs/src/core/: allocator.rs  component.rs  entity.rs  mod.rs  resource.rs
crates/ecs/src/core/internal/: blob.rs
crates/ecs/src/core/internal/storage/: table.rs
crates/ecs/src/core/internal/storage/dense/: map.rs  set.rs
crates/ecs/src/system/: access.rs  mod.rs  runner.rs  schedule.rs
crates/ecs/src/task/: mod.rs
crates/ecs/src/world/: components.rs  event.rs  mod.rs  query.rs
crates/game/: Cargo.toml
crates/game/src/: app.rs  game.rs  lib.rs  phases.rs  plugin.rs  time.rs
crates/graphics/: Cargo.toml
crates/graphics/src/: camera.rs  lib.rs  plugin.rs
crates/graphics/src/core/: color.rs  device.rs  mod.rs  surface.rs  vertex.rs
crates/graphics/src/material/: instance.rs  layout.rs  mod.rs  pipeline.rs  registry.rs
crates/graphics/src/material/shader/: fragment.rs  mod.rs  snippets.rs  vertex.rs
crates/graphics/src/material/shader/nodes/: mod.rs
crates/graphics/src/plugin/: mod.rs
crates/graphics/src/renderer/: draw.rs  mod.rs  surface.rs
crates/graphics/src/renderer/graph/: context.rs  mod.rs  node.rs  resources.rs
crates/graphics/src/renderer/graph/nodes/: mod.rs  render.rs
crates/graphics/src/renderer/graph/pass/: render.rs
crates/graphics/src/renderer/nodes/: render.rs
crates/graphics/src/resources/: binding.rs  buffer.rs  material.rs  mod.rs  pipeline.rs  shader.rs  texture.rs
crates/graphics/src/resources/binding/: mod.rs
crates/graphics/src/resources/material/: mod.rs
crates/graphics/src/resources/material/shader/: mod.rs
crates/graphics/src/resources/material/shader/nodes/: attribute.rs
crates/graphics/src/resources/mesh/: draw.rs  loaders.rs  mod.rs  model.rs
crates/graphics/src/resources/shader/: material.rs  mod.rs
crates/graphics/src/resources/shader/nodes/: mod.rs
crates/graphics/src/resources/texture/: format.rs  mod.rs  render.rs  texture_2d.rs
crates/pbr/: Cargo.toml
crates/pbr/src/material/: extractor.rs  layout.rs  mod.rs  pipeline.rs  plugin.rs
crates/pbr/src/material/pass/: mod.rs
crates/pbr/src/material/shader/: constants.rs  fragment.rs  mod.rs  snippets.rs  vertex.rs
crates/pbr/src/material/shader/nodes/: mod.rs
crates/spatial/: Cargo.toml
crates/spatial/src/: bounds.rs  lib.rs  octree.rs  partition.rs  plugin.rs  quadtree.rs  size.rs  transform.rs
crates/window/: Cargo.toml
crates/window/src/: app.rs  events.rs  lib.rs  plugin.rs  window.rs
examples/basic/: Cargo.toml
examples/basic/examples/: basic.rs  core.wgsl  shader copy.wgsl  shader.wgsl  skybox.wgsl
examples/basic/src/: lib.rs  main.rs
shadow-asset/: Cargo.toml
shadow-asset/src/: artifact.rs  asset.rs  block.rs  bytes.rs  config.rs  database.rs  errors.rs  importer.rs  lib.rs  loader.rs  object.rs  pack.rs  plugin.rs  registry.rs  tracker.rs
shadow-asset/src/database/: config.rs  events.rs  importer.rs  library.rs  loaders.rs  mod.rs  observers.rs  pipeline.rs  queue.rs  registry.rs  state.rs  status.rs  storage.rs  task.rs  tracker.rs
shadow-asset/src/database/events/: import.rs  load.rs  mod.rs
shadow-asset/src/database/observers/: import.rs  mod.rs
shadow-asset/src/events/: import.rs  mod.rs  observers.rs
shadow-asset/src/io/: local.rs  mod.rs  vfs.rs
shadow-asset/src/plugin/: actions.rs  events.rs  mod.rs  observers.rs
shadow-ecs/: Cargo.toml
shadow-ecs/src/: lib.rs
shadow-ecs/src/archetype/: mod.rs  table.rs
shadow-ecs/src/archetype/v2/: mod.rs  table.rs
shadow-ecs/src/core/: component.rs  resource.rs
shadow-ecs/src/core/internal/: blob.rs  mod.rs
shadow-ecs/src/ecs/: mod.rs
shadow-ecs/src/ecs/archetype/: mod.rs
shadow-ecs/src/ecs/core/: component.rs  either.rs  entity.rs  mod.rs  resource.rs
shadow-ecs/src/ecs/event/: mod.rs
shadow-ecs/src/ecs/task/: mod.rs
shadow-ecs/src/event/: mod.rs
shadow-ecs/src/storage/: dense.rs  mod.rs  table.rs
shadow-ecs/src/system/: access.rs  graph.rs  mod.rs  observer.rs  schedule.rs
shadow-ecs/src/task/: mod.rs
shadow-ecs/src/world/: event.rs  events.rs  mod.rs  query.rs
shadow-game/: Cargo.toml
shadow-game/src/: app.rs  game.rs  lib.rs  phases.rs  plugin.rs  scene.rs  schedule.rs
shadow-game/src/game/: mod.rs  plugin.rs  runner.rs  scene.rs  schedule.rs
shadow-graphics/: Cargo.toml
shadow-graphics/src/: camera.rs  lib.rs  plugin.rs
shadow-graphics/src/core/: color.rs  device.rs  mod.rs  surface.rs  vertex.rs
shadow-graphics/src/renderer/: draw.rs  graph.rs  mod.rs
shadow-graphics/src/renderer/graph/: context.rs  mod.rs  resources.rs
shadow-graphics/src/renderer/nodes/: render.rs
shadow-graphics/src/resources/: buffer.rs  material.rs  mesh.rs  mod.rs  pipeline.rs  shader.rs  texture.rs
shadow-graphics/src/resources/material/: mod.rs  shader.rs
shadow-graphics/src/resources/material/shader/: mod.rs
shadow-graphics/src/resources/material/shader/nodes/: attribute.rs  mod.rs  snippets.rs
shadow-graphics/src/spatial/: mod.rs
shadow-graphics/src/window/: mod.rs
shadow-spatial/: Cargo.toml
shadow-spatial/src/: bounds.rs  lib.rs  octree.rs  partition.rs  quadtree.rs
shadow-window/: Cargo.toml
shadow-window/src/: app.rs  events.rs  lib.rs  plugin.rs  window.rs
src/: main.rs
src/ecs/: mod.rs
src/ecs/archetype/: mod.rs
src/ecs/core/: allocator.rs  component.rs  entity.rs  mod.rs  resource.rs
src/ecs/event/: meta.rs  mod.rs
src/ecs/storage/: bits.rs  blob.rs  dense.rs  mod.rs  ptr.rs  sparse.rs  table.rs
src/ecs/system/: access.rs  mod.rs  observer.rs  schedule.rs
src/ecs/task/: mod.rs
src/ecs/world/: events.rs  mod.rs  query.rs
src/engine/: mod.rs
(+26 files in other folders)
