[workspace]
members = [
    "examples/basic",
    "shadow-ecs",
    "shadow-game",
    "shadow-asset",
    "shadow-graphics",
    "shadow-window",
    "examples/*",
]


[workspace.dependencies]
ulid = "1.1.2"
serde = "1.0.203"
toml = "0.8.13"
crc32fast = "1.0.3"
either = "1.13.0"
wgpu = { version = "22.1.0", features = ["serde"] }
