[workspace]
members = [
    "examples/basic",
    "shadow-ecs",
    "shadow-game",
    "shadow-asset",
    "shadow-graphics",
    "shadow-window",
    "shadow-spatial",
    "examples/*",
]


[workspace.dependencies]
ulid = "1.1.2"
serde = "1.0.203"
toml = "0.8.13"
crc32fast = "1.0.3"
either = "1.13.0"
pollster = "0.2.4"
bitflags = { version = "2.6.0" }
bytemuck = { version = "1.17.0", features = ["derive"] }
glam = { version = "0.28", features = ["serde", "bytemuck"] }
wgpu = { version = "22.1.0", features = ["serde"] }
downcast-rs = "1.2.1"