[package]
name = "shadow-graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shadow-asset = { path = "../shadow-asset", version = "0.1.0" }
shadow-game = { path = "../shadow-game", version = "0.1.0" }
shadow-ecs = { path = "../shadow-ecs", version = "0.1.0" }
shadow-window = { path = "../shadow-window", version = "0.1.0" }
shadow-spatial = { path = "../shadow-spatial", version = "0.1.0" }
wgpu = { workspace = true }
ulid = { workspace = true }
serde = { workspace = true }
pollster = { workspace = true }
crc32fast = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
bitflags = { workspace = true }
downcast-rs = { workspace = true }
either = { workspace = true }
encase = "0.9.0"
