[package]
name = "asset"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = { workspace = true }
ecs = { path = "../ecs" }
game = { path = "../game" }
ulid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
either = { workspace = true }
