[package]
name = "graphics"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asset = { path = "../asset" }
game = { path = "../game" }
ecs = { path = "../ecs" }
window = { path = "../window" }
spatial = { path = "../spatial" }
wgpu = { workspace = true, features = ["spirv", "glsl"] }
ulid = { workspace = true }
serde = { workspace = true }
pollster = { workspace = true }
crc32fast = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
bitflags = { workspace = true }
downcast-rs = { workspace = true }
either = { workspace = true }
slab = { workspace = true }
naga = "22.1.0"
encase = "0.9.0"
