[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = "../../crates/game" }
ecs = { path = "../../crates/ecs" }
asset = { path = "../../crates/asset" }
window = { path = "../../crates/window" }
graphics = { path = "../../crates/graphics" }
toml = { workspace = true }
wgpu = { workspace = true }
serde = { workspace = true }
